[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eep-learning-pytorch-portfolio"
version = "0.1.0"
description = "Deep learning projects and reusable PyTorch components"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "Tanbin Akter Mitaly", email = "tanbin.mitaly@gmail.com" }
]

dependencies = [
  "torch>=2.0",
  "torchvision>=0.15",
  "numpy>=1.23",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "pytest",
  "jupyter"
]
[project.optional-dependencies] dev = [ “jupyter”, “black”, “flake8”]

[tool.setuptools.packages.find] where = [“.”]